fix-zapier-link

--- a/html/popup.html
+++ b/html/popup.html
@@ -41,7 +41,7 @@
         </li>
         <li class="mozabook-menu-item">
           <a
-            href="https://mozabookextension.zapier.app/"
+            href="https://mozabookextension-225546.zapier.app/"
             target="_blank"
             class="mozabook-menu-button zapier-button"
           >
