--- a/html/popup.html
+++ b/html/popup.html
@@ -50,6 +50,7 @@
           </a>
         </li>
       </ul>
+      <p class="autor-wrapper">Author: Lukianov Illia</p>
     </div>
     <script src="/js/themeToggle.js"></script>
   </body>
